--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     }
   },
   "dependencies": {
-    "debug": "~2.0.0",
-    "microtime": "~2.0.0"
+    "debug": "^2.0.0",
+    "microtime": "^2.1.1"
   },
   "devDependencies": {
     "autod": "*",
